# layer7waf

./: .gitignore  Cargo.toml  README.md
config/: docker-layer7waf.yaml  layer7waf.yaml
crates/admin/: Cargo.toml
crates/admin/src/: lib.rs  state.rs
crates/admin/src/routes/: bot_stats.rs  config.rs  geoip_stats.rs  health.rs  logs.rs  metrics.rs  mod.rs  rules.rs  scraping_stats.rs  stats.rs
crates/anti-scraping/: Cargo.toml
crates/anti-scraping/src/: captcha.rs  honeypot.rs  lib.rs  obfuscation.rs  session.rs
crates/bot-detect/: Cargo.toml
crates/bot-detect/src/: fingerprint.rs  js_challenge.rs  known_bots.rs  lib.rs  score.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs
crates/coraza/: Cargo.toml  build.rs
crates/coraza/go/: go.mod  main.go
crates/coraza/src/: ffi.rs  lib.rs  transaction.rs
crates/geoip/: Cargo.toml
crates/geoip/src/: lib.rs
crates/ip-reputation/: Cargo.toml
crates/ip-reputation/src/: lib.rs  trie.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: config.rs  context.rs  main.rs  service.rs  upstream.rs
crates/rate-limit/: Cargo.toml
crates/rate-limit/src/: lib.rs  sliding_window.rs  token_bucket.rs
dashboard/: index.html  mock-server.mjs  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: ErrorAlert.tsx  Layout.tsx  Skeleton.tsx  StatsCard.tsx  StatusBadge.tsx  TrafficChart.tsx
dashboard/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  label.tsx  select.tsx  separator.tsx  switch.tsx  table.tsx  tabs.tsx
dashboard/src/hooks/: use-api.ts
dashboard/src/lib/: api.ts
dashboard/src/pages/: AntiScraping.tsx  BotDetection.tsx  Config.tsx  Dashboard.tsx  GeoIp.tsx  Logs.tsx  Metrics.tsx  Rules.tsx
docker/: Dockerfile  docker-compose.yml  nginx-upstream.conf
tests/e2e/: test_waf.sh
tests/integration/: ip_reputation_tests.rs  mod.rs  rate_limit_tests.rs
