[workspace]
resolver = "2"
members = [
    "crates/proxy",
    "crates/coraza",
    "crates/rate-limit",
    "crates/ip-reputation",
    "crates/admin",
    "crates/common",
]

[workspace.dependencies]
# Pingora
pingora = "0.7"
pingora-core = "0.7"
pingora-proxy = "0.7"
pingora-http = "0.7"
pingora-load-balancing = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (admin API)
axum = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus = "0.13"

# Concurrency
dashmap = "6"

# Networking
ipnet = "2"

# Error handling
thiserror = "2"
anyhow = "1"

# Data
bytes = "1"
http = "1"
once_cell = "1"
arc-swap = "1"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }

# Workspace crates
layer7waf-common = { path = "crates/common" }
layer7waf-coraza = { path = "crates/coraza" }
layer7waf-rate-limit = { path = "crates/rate-limit" }
layer7waf-ip-reputation = { path = "crates/ip-reputation" }
layer7waf-admin = { path = "crates/admin" }
